updated the conversion rate test, upload the first translation test

--- a/converstion_rate/conversion_rate_v2.ipynb
+++ b/converstion_rate/conversion_rate_v2.ipynb
@@ -612,10 +612,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "##from the converted rate analysis, we concluded:\n",
     "##Convert rate: Germany > UK > US > China\n",
@@ -3116,10 +3114,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "##polynomial logistic regression with 1 degree cv50 score: 0.9857013445473348\n",
     "##polynomial logistic regression with 2 degree cv50 score: 0.9857332888365677    chosen one\n",
@@ -3713,10 +3709,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "##prediction accurate rate on baseline model is: 0.9856209150326798\n",
     "##prediction accurate rate on bagging baseline model is: 0.9856209150326798\n",
@@ -3769,10 +3763,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "##tuning jobs has been running for 6 hours, manually killed it, and use a randome set of parameters for testing"
    ]
@@ -3918,10 +3910,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "##prediction accurate rate on baseline model is: 0.9856209150326798\n",
     "##prediction accurate rate on bagging baseline model is: 0.9856209150326798\n",
@@ -4242,7 +4232,9 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -4288,10 +4280,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "###Summary, without being able to tune the hyperparameters for random forest and XGBOOST, our baseline model gives the best prediction result\n",
     "\n",
@@ -4303,6 +4293,85 @@
     "##4, germany users have higher convert rate: maybe try to attract more Germany than Chinese? \n",
     "##5, as for the marketing approaches: direct visit has lowest convert rate, coming from off-line promotion? consider decrease it?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    47430.000000\n",
+       "mean         0.025469\n",
+       "std          0.157547\n",
+       "min          0.000000\n",
+       "25%          0.000000\n",
+       "50%          0.000000\n",
+       "75%          0.000000\n",
+       "max          1.000000\n",
+       "Name: pds1, dtype: float64"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comb.pds1.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    47430.000000\n",
+       "mean         0.032258\n",
+       "std          0.176687\n",
+       "min          0.000000\n",
+       "25%          0.000000\n",
+       "50%          0.000000\n",
+       "75%          0.000000\n",
+       "max          1.000000\n",
+       "Name: converted, dtype: float64"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_y.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
