updated the code to show more info at sanity check

--- a/spanish_translating_ab_test/Spanish_translation_ab_test.ipynb
+++ b/spanish_translating_ab_test/Spanish_translation_ab_test.ipynb
@@ -1367,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1377,9 +1377,12 @@
     "    newtable = table_in.loc[table_in['country'] != 'Spain']\n",
     "    countrylist = newtable['country'].unique()\n",
     "    for each in countrylist:\n",
-    "        testcount = newtable.loc[newtable['test'] == 1, 'conversion'].count()\n",
-    "        controlcount = newtable.loc[newtable['test'] == 0, 'conversion'].count()\n",
-    "        if abs(testcount - controlcount)*2/(testcount + controlcount) >= 0.08:\n",
+    "        print(each)\n",
+    "        testcount = newtable.loc[(newtable['test'] == 1) & (newtable['country'] == each), 'conversion'].count()\n",
+    "        controlcount = newtable.loc[(newtable['test'] == 0) & (newtable['country'] == each), 'conversion'].count()\n",
+    "        print(testcount, controlcount)\n",
+    "        if abs(testcount - controlcount)*2/(testcount + controlcount) >= 0.8:\n",
+    "            print('Imbalanced data selection is detected for {}'.format(each))\n",
     "            return False\n",
     "        else:\n",
     "            continue\n",
@@ -1388,16 +1391,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
-   "metadata": {},
+   "execution_count": 233,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mexico\n",
+      "64275 64209\n",
+      "Venezuela\n",
+      "15905 16149\n",
+      "Bolivia\n",
+      "5574 5550\n",
+      "Colombia\n",
+      "26972 27088\n",
+      "Uruguay\n",
+      "3719 415\n",
+      "Imbalanced data selection is detected for Uruguay\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "False"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1412,7 +1434,7 @@
    "source": [
     "# Summary:\n",
     "## Without any data treatment, the A/B test has suggested the test group is inferior than the control group, HOWEVER:\n",
-    "    1, The test group and control group has obvious data selection bias over Argentina and Uruguay, which has led to a biased conclusion. We could use the sanity check to QC the imbalanced traffice distribution issue in future.\n",
+    "    1, The test group and control group has obvious data selection bias over Argentina and Uruguay, which has led to a biased conclusion. We could use the sanity check to QC the imbalanced traffic distribution issue in future.\n",
     "    2, The time span for the test could be longer as we see the test group shows an increase trend of conversion rate while the control group shows the opposite. We need data covering a longer time to draw a more comprehensive conclusion.\n",
     "    3, The current test shows some countries are subject to positive influence while some countries are opposite, we could consider launch the new translation version only for the countries where we see the positive impact."
    ]
