revised the t test analysis part, added a picture

--- a/spanish_translating_ab_test/Spanish_translation_ab_test.ipynb
+++ b/spanish_translating_ab_test/Spanish_translation_ab_test.ipynb
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## In this test, we are designing a one tailed Null hypothesis(H0): The test group performs better than or equally good as the control group. Alternative hypothesis(H1): The test group performs worse than the control group."
+    "## In this test, we are defining a one tailed Null hypothesis(H0): The test group performs better than or equally good as the control group. Alternative hypothesis(H1): The test group performs worse than the control group."
    ]
   },
   {
@@ -868,7 +868,7 @@
    "metadata": {},
    "source": [
     "## A/B testing analysis\n",
-    "### The Null hypothesis for this A/B test is that the conversion rate for the test group will be better or equal than the control group assuming the confidence level = 95% for one-sided test, statistical power is 80%. let's gather some data to calculate the practical significance."
+    "### The Null hypothesis for this A/B test is that the conversion rate for the test group will be better or equal than the control group assuming the confidence level = 95%/significance level = 0.05 for one-sided test, statistical power is 80%. let's gather some data to calculate the practical significance."
    ]
   },
   {
@@ -930,19 +930,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "confidence interal is between 0.003789692877064953 and 0.005971564881079937\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "d_hat = abs(conv_test/total_test - conv_cont/total_cont)\n",
+    "d_hat = conv_test/total_test - conv_cont/total_cont\n",
     "#assume the confidence level(one tailed): 95%  => z=1.65\n",
     "margin = 1.65 * SE_pool\n",
     "#confidence interval = (d_hat - margin, d_hat + margin)\n",
@@ -987,7 +979,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## From the analysis, the z score indicates that the result is statistically and practically significant and we can reject our Null hypothesis and the actual"
+    "## Z score of -7.354 at a one-tailed hypothesis with significance level: 0.05 has p-value <0.00001, which rejects the H0, and the result is significant\n",
+    "\n",
+    "https://www.socscistatistics.com/pvalues/normaldistribution.aspx"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![jupyter](https://github.com/emoticn413/data_science/blob/master/spanish_translating_ab_test/2_sample_t_test.jpg?raw=true)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Another diagram to show the result: with H0: Control group <= test group, HA: Control group > test group. z_score = -7.354 is much less than -1.65 (the z_score at significance level), which indicates that the result is statistically and practically significant and we can reject our Null hypothesis.\n",
+    "\n",
+    "https://www.evanmiller.org/ab-testing/t-test.html"
    ]
   },
   {
@@ -1147,7 +1157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## From the analysis, the test group has better convert rate than the control group after removing Spain, Argentina, Uruguay. H0 is failed to be rejected."
+    "## From the analysis, the test group has better convert rate than the control group after removing Spain, Argentina, Uruguay. Z_score = 0.358, which is smaller than 1.65 (z_score at the significance level).  H0 is failed to be rejected."
    ]
   },
   {
