add another t test diagram

--- a/spanish_translating_ab_test/Spanish_translation_ab_test.ipynb
+++ b/spanish_translating_ab_test/Spanish_translation_ab_test.ipynb
@@ -930,9 +930,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'conv_test' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-da9937d2d33f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0md_hat\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mconv_test\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mtotal_test\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mconv_cont\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mtotal_cont\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;31m#assume the confidence level(one tailed): 95%  => z=1.65\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mmargin\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1.65\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mSE_pool\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m#confidence interval = (d_hat - margin, d_hat + margin)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mconf_int_low\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0md_hat\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mmargin\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'conv_test' is not defined"
+     ]
+    }
+   ],
    "source": [
     "d_hat = conv_test/total_test - conv_cont/total_cont\n",
     "#assume the confidence level(one tailed): 95%  => z=1.65\n",
