add the t test for 2nd scenario

--- a/spanish_translating_ab_test/Spanish_translation_ab_test.ipynb
+++ b/spanish_translating_ab_test/Spanish_translation_ab_test.ipynb
@@ -1171,7 +1171,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## From the analysis, the test group has better convert rate than the control group after removing Spain, Argentina, Uruguay. Z_score = 0.358, which is smaller than 1.65 (z_score at the significance level).  H0 is failed to be rejected."
+    "![t_test2](https://github.com/emoticn413/data_science/blob/master/spanish_translating_ab_test/2_sample_t_test_2.jpg?raw=true)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## From the analysis, the test group has better convert rate than the control group after removing Spain, Argentina, Uruguay. However, the Z_score = 0.358 is smaller than 1.65 (z_score at the significance level). For P_value, we have p_value = 1, which is bigger than 0.05. Therefore, H0 is failed to be rejected."
    ]
   },
   {
