update conversion_rate, ab test, add retention test

--- a/converstion_rate/conversion_rate_v2.ipynb
+++ b/converstion_rate/conversion_rate_v2.ipynb
@@ -4283,15 +4283,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Summary, without being able to tune the hyperparameters for random forest and XGBOOST, our baseline model gives the best prediction result\n",
+    "* Summary, without being able to tune the hyperparameters for random forest and XGBOOST, our baseline model gives the best prediction result\n",
     "\n",
-    "##As for the recommendations for product team and marketing team:\n",
-    "##The more converted rate comes from:\n",
-    "##1, non-first-time users did more purchase: increase the revisit rate by sending followup emails with promo? \n",
-    "##2, people browsing more items tend to pruchase: need to improve the recommender system to show more relevant or demanded items\n",
-    "##3, yonger age users did more purchase: should target on the yonger user groups(<35yo)\n",
-    "##4, germany users have higher convert rate: maybe try to attract more Germany than Chinese? \n",
-    "##5, as for the marketing approaches: direct visit has lowest convert rate, coming from off-line promotion? consider decrease it?"
+    "* As for the recommendations for product team and marketing team:\n",
+    "### The more converted rate comes from:\n",
+    "* 1, non-first-time users did more purchase: increase the revisit rate by sending followup emails with promo? \n",
+    "* 2, people browsing more items tend to pruchase: need to improve the recommender system to show more relevant or demanded items\n",
+    "* 3, yonger age users did more purchase: should target on the yonger user groups(<35yo)\n",
+    "* 4, germany users have higher convert rate: maybe try to attract more Germany than Chinese? \n",
+    "* 5, as for the marketing approaches: direct visit has lowest convert rate, coming from off-line promotion? consider decrease it?"
    ]
   },
   {
