restored the jupyter notebook theme

--- a/spanish_translating_ab_test/Spanish_translation_ab_test.ipynb
+++ b/spanish_translating_ab_test/Spanish_translation_ab_test.ipynb
@@ -838,6 +838,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reset css and font defaults in:\n",
+      "C:\\Users\\Vincent\\.jupyter\\custom &\n",
+      "C:\\Users\\Vincent\\AppData\\Roaming\\jupyter\\nbextensions\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jt -r"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
